@@ -1,10 +1,15 @@
 ;;;; -*- coding: utf-8; fill-column: 78 -*-
 
 changes relative to sbcl-1.4.9:
-  * enhacement: SB-COVER instrumentation for x86[-64] has signficantly less
+  * enhancement: SB-COVER instrumentation for x86[-64] has signficantly less
     overhead. The performance penalty for 64-bit code has been measured at
     around 30% slower than uninstrumented code as contrasted with slowdowns
     in excess of 100% previously.
+  * enhancement: tracing a generic function with the :METHODS T option
+    produces output corresponding to each method called under the default
+    :ENCAPSULATE NIL tracing implementation.
+  * bug fix: updated TRACE documentation.  (lp#574614 was actually already
+    fixed, but there were other issues.)
   * bug fix: fixed x86 GC bug causing heap corruption. (lp#1749369)
   * bug fix: improved compatibility with macOS High Sierra and graphical
     applications.
